完善相关代码，提供相应接口

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "26.0.2"
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "test.szreach.com.test"
         minSdkVersion 20
@@ -26,7 +26,7 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     implementation 'com.yanzhenjie.nohttp:nohttp:1.1.9'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.koushikdutta.async:androidasync:2.+'
