--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,10 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.+'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     implementation 'com.yanzhenjie.nohttp:nohttp:1.1.9'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.koushikdutta.async:androidasync:2.+'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
